# protobuf-demo

./: CMakeLists.txt  README.MD
proto/: Makefile  person.proto
src/: CMakeLists.txt  read_person.cpp  write_person.cpp
